--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Teko:wght@700&display=swap');
 
-/* 
+.Home{
+  display: flex;
+  justify-content: center;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.container{
+  width: 100px;
+  height: 300px;
+  border: 3px solid black;
+  background-color: rgb(30, 30, 30);
+  display: flex;
+  flex-direction: column;
+}
 
-*/
+
+.light{
+  width: 70px;
+  height: 70px;
+  border: 2px solid black;
+  border-radius: 50%;
+  margin: auto;
+  margin-top: 10px;
+}
